<resources>
    <string name="app_name">Ample Note Clone</string>
    <string-array name="days_of_week">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string name="write_it_down_get_it_done">Write it down. Get it done.</string>
    <string name="enter_your_email_address">  Enter your email address</string>
    <string name="sign_in">Sign in</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="web_key">AIzaSyAkIY_8aPwRp2w9YMwRGOp5-GLMzGnwItE</string>
    <string name="work">WORK</string>
    <string name="personal">PERSONAL</string>
    <string name="calendar">Calendar</string>
    <string name="notes">Notes</string>
    <string name="settings">Settings</string>
    <string name="tasks">Tasks</string>
    <string name="jots">Jots</string>
    <string name="search">Search</string>
    <string name="ocr">OCR</string>
    <string name="add_note">Add Note</string>
    <string name="add_task">Add Task</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="sort_options">
        <item>Sort by task score</item>
        <item>Sort by most recent</item>
        <item>Sort by whatever</item>
    </string-array>
    <string-array name="task_duration">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
        <item>60 minutes</item>
    </string-array>
    <string name="pro_plan">Pro</string>
    <string name="unlimited_plan">Unlimited</string>
    <string name="founder_plan">Founder</string>
    <string name="pro_plan_monthly">Pro Plan - Monthly</string>
    <string name="pro_plan_free_trial">Pro Plan - Free Trial</string>
    <string name="trial_start">Starting today</string>
    <string name="trial_period">14-day free trial</string>
    <string name="price_monthly">59.000 đ/month + ax</string>
    <string name="price_free_trial">59.000 đ/month + tax</string>
    <string name="add_tax">Thêm thuế</string>
    <string name="terms">• Cancel anytime in Subcriptions on Google Play\n</string>
    <string name="payment_method">MoMo e-wallet: ***1101</string>
    <string name="subscribe">Subscribe</string>
    <string name="open_drawer">Open Navigation Drawer</string>
    <string name="close_drawer">Close Navigation Drawer</string>
    <string name="notes_count_1">1 NOTE</string>
    <string name="notes_count">%d NOTES</string>
    <string name="logout">Log out</string>
    <string name="drawer_title_nav">NAVIGATION</string>
    <string name="drawer_title_tags">TAGS</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="this_weekend">This weekend</string>
    <string name="one_week">One week</string>
    <string name="three_weeks">Three weeks</string>
    <string name="choose_date">Choose date</string>
    <string name="delete_note">Delete Note</string>
    <string name="sort_option_title_a_z">Title: A–Z</string>
    <string name="sort_option_last_updated">Last updated</string>
    <string name="sort_option_date_created">Date created</string>
    <string name="add_your_profile_info">Add your profile info</string>
    <string name="upload_a_profile_photo">Upload a profile photo</string>
    <string name="full_name">Full Name</string>
    <string name="this_is_how_you_ll_appear_to_friends_in_shared_notes">This is how you\'ll appear to friends in shared notes</string>
    <string name="save_profile_information">Save profile information</string>
    <string name="amplenote_plan">Amplenote Plan</string>
    <string name="pro_plan_text">Pro Plan</string>
    <string name="level_up_your_productivity">Level up your productivity</string>
    <string name="all_the_benefits_of_personal_plus">All the benefits of Personal plus:</string>
    <string name="no_nags_or_banners_n_uploads_greater_than_5mb_n_share_tags_with_groups">• No nags or banners\n• Uploads greater than 5mb\n• Share tags with groups</string>
    <string name="try_amplenote_pro_free_for_2_weeks">Try Amplenote Pro free for 2 weeks!</string>
    <string name="plans_start_at_59000_month_after_trial">Plans start at 59000 đ/month after trial</string>
    <string name="after_your_2_week_free_trial_payment_will_be_charged_to_your_google_play_account_the_subscription_automatically_renews_unless_it_is_canceled_at_least_24_hours_before_the_end_of_the_current_period_your_account_will_be_charged_for_renewal_within_24_hours_prior_to_the_end_of_the_current_period_you_can_manage_and_cancel_your_subscriptions_by_going_to_your_google_play_account_settings_after_purchase">After your 2 week free trial, payment will be charged to your Google Play account. The subscription automatically renews unless it is canceled at least 24 hours before the end of the current period. Your account will be charged for renewal within 24 hours prior to the end of the current period. You can manage and cancel your subscriptions by going to your Google Play account settings after purchase.</string>
    <string name="we_ll_charge_59000_at_the_end_of_your_free_trial">We\'ll charge 59000 đ at the end of your free trial.</string>
    <string name="continue_text">Continue</string>
    <string name="invite_friends">Invite friends</string>
    <string name="invite_friends_to_amplenote">Invite friends to Amplenote.</string>
    <string name="share_to_do_lists_and_edit_notes_together_in_real_time">Share to-do lists and edit notes together in real time.</string>
    <string name="email_address">Email Address</string>
    <string name="add_another_email">Add another email</string>
    <string name="send_invitation">Send Invitation</string>
    <string name="daily_jots">daily-jots</string>
    <string name="sign_in_to_your_amplenote_account">Sign in to your Amplenote account.</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="date_created">Date Created</string>
    <string name="scan_image">Scan Image</string>
    <string name="scan_text">Scan</string>
    <string name="subscription">SUBSCRIPTION</string>
    <string name="personal_text">Personal</string>
    <string name="choose_a_plan">Choose a Plan</string>
    <string name="invite_friends_and_earn_credits">Invite friends and earn credits</string>
    <string name="notifications">Notifications</string>
    <string name="task_reminders">Task Reminders</string>
    <string name="get_notifications_when_tasks_are_due">Get notifications when tasks are due</string>
    <string name="appearance">Appearance</string>
    <string name="first_day_of_week">First Day of Week</string>
    <string name="sunday">Sunday</string>
    <string name="default_note_width">DEFAULT NOTE WIDTH</string>
    <string name="standard_width">Standard width</string>
    <string name="task_completion_effect">TASK COMPLETION EFFECT</string>
    <string name="dazzle">Dazzle</string>
    <string name="app_info">APP INFO</string>
    <string name="version_3_124_739">Version 3.124 (739)</string>
    <string name="developer_reports">DEVELOPER REPORTS</string>
    <string name="send_dubugging_report">Send dubugging report</string>
    <string name="share_merge_reports">Share merge reports</string>
    <string name="send_a_report_to_developers_when_a_merge_occurs_in_a_non_vault_note">Send a report to developers when a merge occurs in a non-Vault note</string>
    <string name="share_usage_statistics">Share usage statistics</string>
    <string name="send_anonymous_usage_statistics_to_developers">Send anonymous usage statistics to developers</string>
    <string name="quick_bar_todo_added">Quick bar TODO added</string>
    <string name="_1_item">1 item</string>
    <string name="danger_zone">DANGER ZONE</string>
    <string name="delete_account">Delete account</string>
    <string name="cancel">Cancel</string>
    <string name="permanently_delete_your_amplenote_account_and_all_data_associated_with_it_this_cannot_be_undone">Permanently delete your Amplenote account and all data associated with it. This cannot be undone.</string>
    <string name="to_start_the_process_press_the_button_below_to_send_a_confirmation_code_to_the_email_address_associated_with_your_account">To start the process, press the button below to send a confirmation code to the email address associated with your account.</string>
    <string name="send_confirmation_code">Send confirmation code</string>
    <string name="confirmation_code">Confirmation code</string>
    <string name="confirm_account_deletion">Confirm account deletion</string>
    <string name="sign_up_for_amplenote">Sign up for Amplenote.</string>
    <string name="create_account">Create account</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="task_details">Task details</string>
    <string name="available_tasks">Available tasks</string>
    <string name="untitled_note">untitled note</string>
    <string name="updated_1_second_ago">Updated 1 second ago</string>
    <string name="calendar_view">Calendar view</string>
    <string name="one_day">One Day</string>
    <string name="three_days">Three Days</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="go_to_today">GO TO TODAY</string>
    <string name="tag_name">Tag Name</string>
    <string name="remove_tag_from_note">Remove tag from note</string>
    <string name="edit_tag">Edit tag</string>
    <string name="delete_tag">Delete tag</string>
    <string name="add_a_task">ADD A TASK</string>
    <string name="select_a_start_time_optional">Select a start time (optional)</string>
    <string name="quick_to_do">Quick to-do...</string>
    <string name="add">Add</string>
    <string name="schedule_task">SCHEDULE TASK</string>
    <string name="today_text">Today</string>
    <string name="tomorrow_text">Tomorrow</string>
    <string name="one_week_text">One week</string>
    <string name="three_weeks_text">Three weeks</string>
    <string name="choose_day_and_time">Choose day and time...</string>
    <string name="select_a_note">SELECT A NOTE</string>
    <string name="start_a_new_note">Start a new note</string>
    <string name="deleting_tag_name_will_remove_it_from_all_notes_it_is_applied_to_and_remove_all_descendant_tags_you_cannot_undo_this_action">Deleting #tag-name will remove it from all notes it is applied to and remove all descendant tags. You cannot undo this action.</string>
    <string name="delete_this_tag">Delete this tag?</string>
    <string name="cancel_text">CANCEL</string>
    <string name="delete_tag_text">DELETE TAG</string>
    <string name="custom_duration">Custom Duration</string>
    <string name="enter_duration_in_minute_e_g_120">Enter duration in minute (e.g. 120)</string>
    <string name="_2_hours">2 hours</string>
    <string name="_4_hours">4 hours</string>
    <string name="all_day">All day</string>
    <string name="apply">APPLY</string>
    <string name="first_day_of_week_text">FIRST DAY OF WEEK</string>
    <string name="plan_confirmation">Plan Confirmation</string>
    <string name="to_start_the_process_press_the_button_below_to_send_a_confirmation_code_to_the_email_address_associated_with_your_account_text">To start the process, press the button below to send a confirmation code to the email address associated with your account.</string>
    <string name="send_confirmation_code_text">Send confirmation code</string>
    <string name="confirmation_code_text">Confirmation code</string>
    <string name="duplicate">Duplicate</string>
    <string name="lock">Lock</string>
    <string name="summary">Summary</string>
</resources>