<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_nav"
        android:title="@string/search"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_duplicate"
        android:icon="@drawable/ic_duplicate"
        android:title="@string/duplicate"
        app:iconTint="@color/white"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_delete_note"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete_note"
        app:iconTint="@color/white"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_lock"
        android:icon="@drawable/ic_lock"
        android:title="@string/lock"
        app:iconTint="@color/white"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_summary"
        android:icon="@drawable/ic_summary"
        android:title="@string/summary"
        app:iconTint="@color/white"
        app:showAsAction="never"/>



</menu>
