<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Header -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp"
            android:paddingEnd="16dp">

            <ImageView
                android:id="@+id/back_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_back" />

            <!-- Settings Title -->
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@id/back_icon"
                android:text="@string/amplenote_plan"
                android:textColor="#333"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <!-- Plan Details -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <!-- Icon và Text -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_merger_first_line"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pro_plan_text"
                        android:textColor="#212121"
                        android:textSize="16sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_merger_second_line"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:maxWidth="300dp"
                    android:text="@string/level_up_your_productivity"
                    android:textColor="#444"
                    android:textSize="14sp"
                    android:textStyle="italic" />
            </LinearLayout>

            <ImageView
                android:layout_width="140dp"
                android:layout_height="80dp"
                android:layout_marginStart="16dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_help_pages" />
        </LinearLayout>

        <!-- Features -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_the_benefits_of_personal_plus"
            android:textColor="#333"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:lineSpacingExtra="4dp"
            android:paddingBottom="8dp"
            android:text="@string/no_nags_or_banners_n_uploads_greater_than_5mb_n_share_tags_with_groups"
            android:textColor="#333"
            android:textSize="14sp" />

        <!-- Trial Offer -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightBlue"
            android:lineSpacingExtra="6dp"
            android:paddingHorizontal="10dp"
            android:paddingTop="12dp"
            android:text="@string/try_amplenote_pro_free_for_2_weeks"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightBlue"
            android:lineSpacingExtra="6dp"
            android:paddingHorizontal="10dp"
            android:paddingBottom="12dp"
            android:text="@string/plans_start_at_59000_month_after_trial"
            android:textColor="@android:color/white"
            android:textSize="14sp" />


        <!-- Continue Button -->
        <Button
            android:id="@+id/continue_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/lightBlue"
            android:text="@string/continue_text"
            android:textSize="16sp" />

        <!-- Subscription Info -->
        <TextView
            android:id="@+id/subscription_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="8dp"
            android:text="@string/we_ll_charge_59000_at_the_end_of_your_free_trial"
            android:textSize="14sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/after_your_2_week_free_trial_payment_will_be_charged_to_your_google_play_account_the_subscription_automatically_renews_unless_it_is_canceled_at_least_24_hours_before_the_end_of_the_current_period_your_account_will_be_charged_for_renewal_within_24_hours_prior_to_the_end_of_the_current_period_you_can_manage_and_cancel_your_subscriptions_by_going_to_your_google_play_account_settings_after_purchase"
            android:textSize="14sp" />



    </LinearLayout>
</ScrollView>